[package]
name = "minotaur"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ricott1/minotaur"
repository = "https://github.com/ricott1/minotaur"
keywords = ["cli", "dungeon", "rebels", "game"]
categories = ["games"]

[profile.release]
strip = true
opt-level = 3
lto = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.28.1"
directories = "6.0.0"
futures = "0.3.30"
image = "0.25.4"
include_dir = "0.7.3"
itertools = "0.14.0"
log = "0.4.25"
log4rs = "1.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = { version = "0.29.0", features = ["unstable-backend-writer"] }
russh = "0.49.2"
russh-keys = "0.49.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = "1.43.0"
tokio-util = "0.7.13"
uuid = { version = "1.12.0", features = ["v4", "serde"] }

